--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "js-cookie": "^3.0.5",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-toast-notification": "^3.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
