--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@tanstack/vue-table": "^8.21.3",
+    "@vueform/multiselect": "^2.6.11",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "js-cookie": "^3.0.5",
+    "lodash-es": "^4.17.21",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
+    "vue-good-table-next": "^0.2.2",
     "vue-router": "^4.5.1",
     "vue-toast-notification": "^3.1.3"
   },
